# LeafSQL

./: CMakeLists.txt  README.md  SelectFromStatement.cpp  SelectFromStatement.h  Token.h  main.cpp
Lexer/: Lexer.cpp  Lexer.h
QueryExecutor/: QueryExecutor.cpp  QueryExecutor.h
QueryParser/: QueryParser.cpp  QueryParser.h
QueryParser/Lexer/: Lexer.cpp  Lexer.h
QueryPreparer/: QueryPreparer.cpp  QueryPreparer.h
QueryValidator/: QueryValidator.cpp  QueryValidator.h
QueryValidator/DataType/: DataType.cpp  DataType.h
SelectFromStatement/: SelectFromStatement.cpp  SelectFromStatement.h
Shared/: Globals.cpp  Globals.h
Shared/Globals/: Globals.cpp
Shared/Utils/: Utils.cpp  Utils.h
Statements/CreateDatabaseStatement/: CreateDatabaseStatement.cpp  CreateDatabaseStatement.h
Statements/CreateStatement/: CreateStatement.cpp  CreateStatement.h
Statements/CreateTableStatement/: CreateTableStatement.cpp  CreateTableStatement.h
Statements/DeleteFromStatement/: DeleteFromStatement.cpp  DeleteFromStatement.h
Statements/InsertIntoStatement/: InsertIntoStatement.cpp  InsertIntoStatement.h
Statements/SelectFromStatement/: SelectFromStatement.cpp  SelectFromStatement.h
Statements/UpdateStatement/: UpdateStatement.cpp  UpdateStatement.h
Statements/UseDatabaseStatement/: UseDatabaseStatement.cpp  UseDatabaseStatement.h
Token/: Token.h
Token/KeywordToken/: KeywordToken.cpp  KeywordToken.h
Token/Types/: KeywordType.h  TokenType.h
